# ungrammar-analyzer

./: .editorconfig  .gitattributes  .typos.toml  Cargo.toml  README.md  package-lock.json  package.json
crates/parser/: Cargo.toml
crates/parser/src/: edition.rs  event.rs  grammar.rs  input.rs  lexed_str.rs  lib.rs  parser.rs  shortcuts.rs  tests.rs  token_set.rs
crates/parser/src/grammar/: items.rs  rules.rs
crates/parser/src/grammar/rules/: atom.rs
crates/parser/src/syntax_kind/: generated.rs
crates/parser/src/tests/: sourcegen_inline_tests.rs  top_entries.rs
crates/parser/test_data/lexer/err/: invalid_ending.rast  tokens.rast  tokens.ungram  unclosed_token_at_eof.rast  unclosed_token_with_ferris.rast  unclosed_token_with_slash.rast  unclosed_token_with_slash_quote.rast  unclosed_token_with_space.rast
crates/parser/test_data/lexer/ok/: chars.rast  chars.ungram  comment.rast  comment.ungram  node.rast  node.ungram  strings.rast  strings.ungram  symbols.rast  symbols.ungram  whitespace.rast
crates/parser/test_data/parser/err/: double_string.rast
crates/parser/test_data/parser/inline/err/: recovery_node_alt.rast  recovery_node_alt.ungram  recovery_node_eq.rast  recovery_node_eq.ungram  recovery_node_name.rast  recovery_node_name.ungram  recovery_node_rule.rast  recovery_node_rule.ungram
crates/parser/test_data/parser/inline/ok/: alt_rule.rast  alt_rule.ungram  bp.rast  bp.ungram  grammar_contents.rast  grammar_contents.ungram  labeled_rule.rast  labeled_rule.ungram  opt_rule.rast  opt_rule.ungram  paren_rule.rast  paren_rule.ungram  rep_rule.rast  (+5 more)
(+18 files in other folders)
