[package]
name = "parser"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
doctest = false

[dependencies]
drop_bomb = "0.1.5"
lexer.workspace = true
stdx.workspace = true
tracing.workspace = true

[dev-dependencies]
expect-test.workspace = true

sourcegen.workspace = true

[features]
